--- a/event-handling/public/index.html
+++ b/event-handling/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Notes App</title>
+    <title>Event Handling</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
